demo-istio/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
  namespace: test-istio
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-backend
  namespace: test-istio
spec:
  hosts:
  - demo-backend
  http:           
  - match:
     - headers:
        cookie:
          regex: "^(.*?; )?(login=.*)(;.*)?$"    
    route:
    - destination:
        host: demo-backend
        subset: v1
  - route:
    - destination:
        host: demo-backend
        subset: v2

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo-backend
  namespace: test-istio
spec:
  host: demo-backend
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
